--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,19 @@
 
 /* Your CSS Code here. */
+  table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        thead {
+            background-color: #f2f2f2;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: center;
+        }
+        th {
+            background-color: #d74a49;
+            color: white;
+        }
